// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template tests should match snapshot 1`] = `
<div
  className="template"
>
  <p>
    Hey, cool Bro!
  </p>
  <p>
    Hey, cool Bro!
  </p>
  <p>
    Hey, cool Bro!
  </p>
</div>
`;

exports[`Template tests should match snapshot with template props 1`] = `
<div
  className="template"
>
  <p>
    Hey, cool Dude!
  </p>
  <p>
    Hey, cool Dude!
  </p>
  <p>
    Hey, cool Dude!
  </p>
</div>
`;
